--- a/web/index.html
+++ b/web/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="initial-scale=1.0, width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CouchPlay Web Client</title>
+    <script src="./js/ws.js"></script>
+    <link rel="stylesheet" href="./css/couchplay.css">
 </head>
 <body>
-    <h1>Connected!</h1>
+    <div class="playfield">
+        <div class="loadingIndicator">Connecting…</div>
+    </div>
+
+    <script>load();</script>
 </body>
 </html>
